--- a/.github/workflow/main.yaml
+++ b/.github/workflow/main.yaml
@@ -88,6 +88,7 @@ jobs:
         run: |
           docker run --name=data-collection -d \
           -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
+          -e MONGO_DB_URL=${{secrets.MONGO_DB_URL}} \
           -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
           -e AWS_BUCKET_HEADER_URL=${{ secrets.AWS_BUCKET_HEADER_URL }} \
           -e AWS_BUCKET_NAME=${{ secrets.AWS_BUCKET_NAME }} \
