--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -71,22 +71,13 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
 
-        #       aws ecr get-login-password \
-        #     --region <region> \
-        # | docker login \
-        #     --username AWS \
-        #     --password-stdin <aws_account_id>.dkr.ecr.<region>.amazonaws.com
-
-
-
-
-
       - name: AWS ECR Login
         #run : aws ecr get-login-password --region ${{ secrets.AWS_REGION }} | docker login --username AWS --password-stdin ${{ secrets.AWS_ECR_LOGIN_URI }}
         run: sudo docker login -u AWS -p $(aws ecr get-login-password --region ${{ secrets.AWS_REGION }}) ${{ secrets.AWS_ECR_LOGIN_URI }}
         #docker login -u AWS -p $(aws ecr get-login-password  --region us-east-1 ) 310559879674.dkr.ecr.us-east-1.amazonaws.com
       - name: Pull App Image
-        run: sudo docker pull ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:DataCollection
+        #run: sudo docker pull ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:DataCollection
+        run: sudo docker pull ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:$IMAGE_TAG
 
       - name: Remove Already Running Container
         run: docker ps -q --filter "name=data-collection" | grep -q . && docker stop ${IMAGE_NAME} && docker rm -fv ${IMAGE_NAME} || true
@@ -112,7 +103,6 @@ jobs:
           docker run --name=data-collection -d \
           -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
           -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
-          -e AWS_BUCKET_HEADER_URL=${{ secrets.AWS_BUCKET_HEADER_URL }} \
           -e AWS_BUCKET_NAME=${{ secrets.AWS_BUCKET_NAME }} \
           -e DATABASE_NAME=${{ secrets.DATABASE_NAME }} \
           -e ATLAS_CLUSTER_USERNAME=${{ secrets.ATLAS_CLUSTER_USERNAME }} \
