--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -76,8 +76,8 @@ jobs:
         run: sudo docker login -u AWS -p $(aws ecr get-login-password --region ${{ secrets.AWS_REGION }}) ${{ secrets.AWS_ECR_LOGIN_URI }}
         #docker login -u AWS -p $(aws ecr get-login-password  --region us-east-1 ) 310559879674.dkr.ecr.us-east-1.amazonaws.com
       - name: Pull App Image
-        run: sudo docker pull ${{secrets.AWS_ECR_LOGIN_URI}}/${{secrets.ECR_REPOSITORY_NAME}}:DataCollection
-        # run: sudo docker pull ${{secrets.AWS_ECR_LOGIN_URI}}/${{secrets.ECR_REPOSITORY_NAME}}:$IMAGE_TAG
+        # run: sudo docker pull ${{secrets.AWS_ECR_LOGIN_URI}}/${{secrets.ECR_REPOSITORY_NAME}}:DataCollection
+        run: sudo docker pull 310559879674.dkr.ecr.us-east-1.amazonaws.com/image-data-collection:DataCollection
 
       - name: Remove Already Running Container
         run: docker ps -q --filter "name=data-collection" | grep -q . && docker stop ${IMAGE_NAME} && docker rm -fv ${IMAGE_NAME} || true
