--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -76,27 +76,14 @@ jobs:
         run: sudo docker login -u AWS -p $(aws ecr get-login-password --region ${{ secrets.AWS_REGION }}) ${{ secrets.AWS_ECR_LOGIN_URI }}
         #docker login -u AWS -p $(aws ecr get-login-password  --region us-east-1 ) 310559879674.dkr.ecr.us-east-1.amazonaws.com
       - name: Pull App Image
-        # run: sudo docker pull ${{secrets.AWS_ECR_LOGIN_URI}}/${{secrets.ECR_REPOSITORY_NAME}}:DataCollection
-        run: sudo docker pull 310559879674.dkr.ecr.us-east-1.amazonaws.com/image-data-collection:DataCollection
+        run: sudo docker pull ${{secrets.AWS_ECR_LOGIN_URI}}/${{secrets.ECR_REPOSITORY_NAME}}:DataCollection
+        #run: sudo docker pull 310559879674.dkr.ecr.us-east-1.amazonaws.com/image-data-collection:DataCollection
 
       - name: Remove Already Running Container
         run: docker ps -q --filter "name=data-collection" | grep -q . && docker stop ${IMAGE_NAME} && docker rm -fv ${IMAGE_NAME} || true
 
       - name: Docker System Prune to Remove Old Images
         run: docker system prune -f
-
-      # - name: Run Docker Image to serve users
-      #   run: |
-      #     docker run --name=data-collection -d \
-      #     -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
-      #     -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
-      #     -e AWS_BUCKET_HEADER_URL=${{ secrets.AWS_BUCKET_HEADER_URL }} \
-      #     -e AWS_BUCKET_NAME=${{ secrets.AWS_BUCKET_NAME }} \
-      #     -e DATABASE_NAME=${{ secrets.DATABASE_NAME }} \
-      #     -e ATLAS_CLUSTER_USERNAME=${{ secrets.ATLAS_CLUSTER_USERNAME }} \
-      #     -e ATLAS_CLUSTER_PASSWORD=${{ secrets.ATLAS_CLUSTER_PASSWORD }} \
-      #     -p 8080:8080 ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:DataCollection
-
 
       - name: Run Docker Image to serve users
         run: |
@@ -107,7 +94,19 @@ jobs:
           -e DATABASE_NAME=${{ secrets.DATABASE_NAME }} \
           -e ATLAS_CLUSTER_USERNAME=${{ secrets.ATLAS_CLUSTER_USERNAME }} \
           -e ATLAS_CLUSTER_PASSWORD=${{ secrets.ATLAS_CLUSTER_PASSWORD }} \
-          -p 8080:8080 310559879674.dkr.ecr.us-east-1.amazonaws.com/image-data-collection:DataCollection
+          -p 8080:8080 ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:DataCollection
+
+
+      # - name: Run Docker Image to serve users
+      #   run: |
+      #     docker run --name=data-collection -d \
+      #     -e AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }} \
+      #     -e AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }} \
+      #     -e AWS_BUCKET_NAME=${{ secrets.AWS_BUCKET_NAME }} \
+      #     -e DATABASE_NAME=${{ secrets.DATABASE_NAME }} \
+      #     -e ATLAS_CLUSTER_USERNAME=${{ secrets.ATLAS_CLUSTER_USERNAME }} \
+      #     -e ATLAS_CLUSTER_PASSWORD=${{ secrets.ATLAS_CLUSTER_PASSWORD }} \
+      #     -p 8080:8080 310559879674.dkr.ecr.us-east-1.amazonaws.com/image-data-collection:DataCollection
 
 
 
